# heidenfest

./: .env.template  .gitignore  README.md  drizzle.config.ts  package-lock.json  package.json  svelte.config.js
convex/: access.ts  admin.ts  apiTokens.ts  auth.ts  dev.ts  email.ts  emails.ts  events.ts  lists.ts  members.ts  notifications.ts  pages.ts  schema.ts
convex/_generated/: api.d.ts
docs/: API.md  PLAN.md
mcp/: README.md  pyproject.toml  server.py  test_smoke.py
scripts/: cleanup-test-data.mjs  screenshots.mjs  seed-heidenfest.mjs  smoke-api.mjs  smoke-upload.mjs
src/: app.d.ts  app.html  hooks.server.ts  index.ts
src/db/: schema.ts
src/lib/: auth-client.ts  auth.ts  format.ts
src/lib/components/app/: ApiTokens.svelte  AppHeader.svelte  Atmosphere.svelte  EventForm.svelte  EventLists.svelte  EventMembers.svelte  EventPages.svelte  ImageUpload.svelte  Markdown.svelte  NotificationSettings.svelte  PageTitle.svelte  UserAvatar.svelte
src/lib/server/: convex.ts  r2.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  data.remote.ts  layout.css
src/routes/(app)/: +layout.server.ts  +layout.svelte
src/routes/(app)/admin/: +page.server.ts  +page.svelte
src/routes/(app)/events/: +page.svelte
src/routes/(app)/events/[id]/: +page.svelte
src/routes/(app)/events/new/: +page.svelte
src/routes/(app)/notifications/: +page.svelte
src/routes/(app)/profile/: +page.svelte
src/routes/(auth)/login/: +page.server.ts  +page.svelte
src/routes/api/images/: +server.ts
src/routes/members/: +page.server.ts  +page.svelte
(+6 files in other folders)
