[project]
name = "skol-mcp"
version = "0.1.0"
description = "MCP server for skol — lets agents plan events, manage lists and pages"
requires-python = ">=3.11"
dependencies = ["fastmcp>=2.0", "httpx>=0.27"]

[project.scripts]
skol-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
